[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-markdown"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "mistune>=3.0",
]

[project.scripts]
mcp-markdown = "mcp_markdown.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_markdown"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
